[gd_scene load_steps=4 format=3 uid="uid://b1lxm0if6ch1o"]

[ext_resource type="Script" path="res://GUI/win_screen.gd" id="1_6h5si"]
[ext_resource type="AudioStream" uid="uid://dx2kjuwdmuji3" path="res://GUI/click.mp3" id="2_v3akq"]

[sub_resource type="LabelSettings" id="LabelSettings_lnu4h"]
font_size = 64

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6h5si")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 121.0
grow_horizontal = 2
theme_override_constants/margin_top = 30

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Thanks for playing!"
label_settings = SubResource("LabelSettings_lnu4h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -174.0
offset_right = 179.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/separation = 30
alignment = 1

[node name="RestartButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Restart"

[node name="MenuButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Quit
"

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ClickSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v3akq")

[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
